--- a/test-cases.yml
+++ b/test-cases.yml
@@ -6,9 +6,8 @@
   prerequisites: |
     Открыта главная страница интернет-магазина через веб-браузер. Все настройки браузера по умолчанию.
   test-data: |
-    Тестовые данные отсутствуют.
+    https://hexlet-products-store.vercel.app/
   steps:
-    - Открыть главную страницу интернет-магазина https://hexlet-products-store.vercel.app/.
     - Посмотреть адресную строку браузера.
     - Проверить, начинается ли URL с "https://".
     - Проверить наличие значка замка, свидетельствующего о безопасном соединении.
@@ -24,37 +23,57 @@
     DevTools открыт в браузере (например, Google Chrome).
   test-data: |
     Устройства для тестирования:
-      - iPhone SE
-      - iPhone 12 Pro
-      - iPad Air
+      - iPhone SE — 375×667 px
+      - iPhone 12 Pro — 390×844 px
+      - iPad Air — 820×1180 px
   steps:
-    - Открыть DevTools в браузере.
-    - Включить режим эмуляции устройства («Toggle device toolbar»).
-    - Выбрать первое тестируемое устройство (например, iPhone SE).
-    - Проверить корректность отображения - все элементы помещаются в экран, текст читаемый, кнопки кликабельны.
-    - Повторить шаги для других устройств - iPhone 12 Pro, iPad Air.
-    - Протестировать переходы по меню, работу форм, и отображение модальных окон.
+    - Открыть DevTools → включить режим эмуляции устройств (Toggle device toolbar).
+    - Выбрать iPhone SE и установить разрешение 375×667 px.
+      - Перейти на главную страницу.
+      - Проверить отображение шапки, меню, баннера.
+      - Перейти в раздел "Каталог".
+      - Проверить отображение фильтров и карточек товаров.
+      - Открыть карточку товара — проверить изображение, цену, рейтинг и кнопку "В корзину".
+      - Перейти в "Корзину" — проверить структуру и элементы управления.
+      - Перейти на страницу "Оформление заказа" — проверить форму ввода.
+      - Повторить те же действия для iPhone 12 Pro — 390×844 px.
+      - Повторить те же действия для iPad Air — 820×1180 px.
   expected-result: |
     На всех проверенных устройствах:
       - Элементы интерфейса корректно масштабируются и располагаются.
-      - Ничто не выходит за пределы экрана.
+      - Элементы не выходят за пределы экрана.
       - Кнопки, формы и навигация работают стабильно.
       - Текст не обрезается, изображения масштабируются пропорционально.
 
 - summary: |
-    Проверка на совместимость с последней версией браузера
+    Проверка совместимости интернет-магазина с последними версиями популярных браузеров
   requirement: |
-    При открытии в браузере сайт должен иметь внешний вид соответвуюший ожиданию
-  prerequisites:
-    Открыт браузер Google Chrome, Opera,Mozilla Firefox
+    При открытии сайта в браузере пользователь должен видеть корректный внешний вид и иметь доступ ко всем функциям, включая интерактивные элементы и переходы по страницам.
+  prerequisites: |
+    Установлены следующие версии браузеров:
+      - Google Chrome 138.0.7204.158
+      - Mozilla Firefox 140.0.4
+      - Opera 120.0.5543.93
   test-data: |
-    Тестовые данные отсутсвуют
+    URL: https://hexlet-products-store.vercel.app/
+    Открыта страница для проверки: главная, каталог, карточка товара, корзина, оформление заказа
   steps:
-    - Открываем сайт https://hexlet-products-store.vercel.app/
-    - Проверяем то, что все функции и интерактивные элементы работают должным образом и отображаются корректно 
-  expected-result: |
-    Сайт открывается без ошибок, все функции и внешний вид работают корректно 
-
+    - Открыть каждый браузер по очереди (Chrome, Firefox, Opera).
+    - Проверить корректность отображения главной страницы - шапка и меню присутствуют.
+    - Перейти в "Каталог" — проверить фильтры, карточки товаров, пагинацию.
+    - Открыть карточку товара — убедиться, что видно название, цену, рейтинг, кнопку "В корзину".
+    - Добавить товар в корзину.
+    - Перейти на страницу "Корзина" — проверить удаление товара, кнопку "Оформить заказ".
+    - Перейти к "Оформлению заказа" — проверить поля формы, их доступность и внешний вид.
+    - Проверить кликабельность всех интерактивных элементов (кнопки, фильтры, ссылки).
+    - Оценить скорость загрузки страниц (визуально не более 3 сек).
+  expected-result: 
+      - Сайт открывается корректно, без ошибок загрузки или отображения.
+      - Верстка соответствует ожидаемому - элементы расположены правильно, не перекрываются.
+      - Все функции (каталог, фильтры, корзина, форма заказа) работают стабильно.
+      - Визуальное оформление идентично во всех проверенных браузерах.
+      - Нет ошибок в консоли разработчика
+    
 - summary: |
     Проверка языка интерфейса, загружаемого по умолчанию при первом посещении интернет-магазина
   requirement: |
@@ -64,8 +83,9 @@
     2. Установлена языковая настройка браузера: "ru-RU".
   test-data: |
     Языковая настройка браузера: "ru-RU"
+    https://hexlet-products-store.vercel.app/
   steps:
-    - Открыть главную страницу интернет-магазина в режиме инкогнито или в браузере без сохранённых данных.
+    - Перейти на главную страницу интернет-магазина
     - Проверить язык интерфейса, используемый на сайте.
   expected-result: |
     Интерфейс интернет-магазина загружен на русском языке в соответствии с языковой настройкой браузера.
@@ -85,28 +105,6 @@
     - Нажать кнопку "Корзина" в правом верхнем углу
   expected-result: |
     В корзине отображается товар "Essence Mascara Lash Princess"
-
-- summary: |
-    Проверка поялвения модального окна при добавлении товара в корзину
-  requirement: |
-    При добавлении товаров в корзину появляется модальное окно с возможностью указать количество товара
-  prerequisites: |
-    Корзина пуста. Открыта страница со списком доступных товаров.Текущий язык интерфейса: по умолчанию.
-  test-data: |
-    Товар: Essence Mascara Lash Princess
-    Цена: 8,94$
-    Количество: 2
-  steps:
-    - Переключить язык интерфейса на "Russian" в правом верхнем углу.
-    - Найти товар "Essence Mascara Lash Princess" в каталоге.
-    - Нажать кнопку "В корзину" рядом с этим товаром.
-    - Убедиться, что появилось модальное окно.
-    - Ввести количество "2" в соответствующее поле.
-  expected-result: |
-    После нажатия кнопки "В корзину" появляется модальное окно.
-    В модальном окне отображается информация о товаре: название, цена.
-    Поле для ввода количества доступно и принимает значение "2".
-    Пользователь может подтвердить добавление товара в корзину. 
 
 - summary: |
     Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
@@ -135,7 +133,7 @@
 - summary: |
     Оформление заказа
   requirement: |
-    При нажатии кнопки "оформить заказ", появляется модальное окно с названием товара, количеством и ценой. Имеется кнопка "Подтвердить заказ". Запрос с сервера возвращается без ошибок
+   Пользователь должен иметь возможность оформить заказ и быть перенаправленным на страницу оплаты после подтверждения
   prerequisites: |
     В корзине имеется товар Potatoes
   test-data: |
@@ -145,11 +143,26 @@
   steps:
     - Перейти в корзину
     - Нажать "Оформить заказ"
-    - Заполнить обязательные поля (ФИО, телефон, адрес)
-    - Выбрать способ оплаты и доставки
-    - Нажать "Подтвердить заказ"
   expected-result: |
-    Открывается форма оформления. Поля принимают данные. Заказ успешно создан, отображается номер заказа. Запрос с сервера возвращается без ошибок
+    Страница оформления заказа загружается корректно. Сервер возвращает успешный ответ. Происходит переход на страницу оплаты.
+
+- summary: |
+    Проверка возможности закрытия окна оформления заказа
+  requirement: |
+    Пользователь должен иметь возможность закрыть окно оформления заказа до подтверждения заказа, используя доступные элементы управления (крестик, кнопку "Закрыть", клик вне области окна).
+  prerequisites: |
+    В корзине добавлен товар. Пользователь находится на этапе оформления заказа — открыто окно оформления.
+  test-data: |
+    Товар: Potatoes 
+  steps:
+    - Нажать на крестик в правом верхнем углу окна.
+    - Повторить попытку закрытия через кнопку "Закрыть"
+    - Проверить реакцию при клике вне области окна (на фон)
+  expected-result: |
+    Окно оформления заказа корректно закрывается при использовании любого из доступных способов:
+      - По нажатию на крестик.
+      - По кнопке "Закрыть" (если есть).
+      - По клику вне области окна.
 
 - summary: |
     Изменение состава заказа на этапе оформления
@@ -262,7 +275,6 @@
     Ценовой диапазон - от 1 до 3000
     Выбранный бренд: Gucci
   steps:
-    - Перейти в раздел "Каталог".
     - Установить фильтр цен - от 1 до 3000.
     - Выбрать бренд "Gucci" в панели фильтрации.
     - Подтвердить фильтр и дождаться обновления списка товаров.
@@ -344,7 +356,6 @@
   test-data: |
     Ценовой диапазон - от 0 до 6579
   steps:
-    - Перейти в раздел "Каталог".
     - Найти блок фильтрации товаров по цене.
     - минимальная цена — 0, максимальная — 6579.
     - Подтвердить фильтр и дождаться обновления списка товаров.
@@ -365,7 +376,6 @@
     Ценовой диапазон: от 1 до 3000
     Выбранный бренд: Gucci
   steps:
-    - Перейти в раздел "Каталог".
     - Установить фильтр цен - от 1 до 3000.
     - Выбрать бренд "Gucci" в панели фильтрации.
     - Подтвердить фильтр и дождаться обновления списка товаров.
@@ -478,7 +488,6 @@
   test-data: |
     Элемент управления: Кнопка "Следующая"
   steps:
-    - Убедиться, что отображается первая страница товаров.
     - Нажать кнопку "Следующая"
     - Дождаться загрузки следующей страницы каталога.
   expected-result: |
@@ -496,7 +505,6 @@
   test-data: |
     Элемент управления: кнопка "Предыдущая"
   steps:
-    - Убедиться, что пользователь находится на второй странице списка товаров.
     - Нажать кнопку "Предыдущая".
     - Дождаться загрузки первой страницы.
   expected-result: |
@@ -510,9 +518,7 @@
   requirement: |
     Система должна сохранять выбранные параметры фильтрации (например, бренд) при навигации между страницами каталога, отображая соответствующие отфильтрованные товары.
   prerequisites: |
-    Пользователь находится в разделе "Каталог".
-    На первой странице активирован фильтр по бренду Dior.
-    Доступна навигация по страницам каталога.
+    Пользователь находится в разделе "Каталог". На первой странице активирован фильтр по бренду Dior. Доступна навигация по страницам каталога.
   test-data: |
     Активный фильтр: Бренд — Dior
     Текущая страница: 1
@@ -536,15 +542,60 @@
     - Название товара;
     - Изображение товара;
     - Цена;
+    - Рейтинг товара;
     - Призыв к действию (например, кнопка "В корзину" или "Купить").
-    - Убедиться, что все элементы корректно отображаются и не перекрываются.
   expected-result: |
-    В карточке товара отображаются все необходимые элементы:
+    В карточке товара отображаются все необходимые элементы: 
     Название товара читаемо и расположено корректно;
     Изображение товара отображается без искажений;
     Цена указана в понятном формате;
+    Рейтинг товара отображается в виде звездочек или числового значения;
     Призыв к действию присутствует, визуально выделен и кликабелен.
     Элементы не выходят за пределы карточки и корректно адаптированы под текущий интерфейс.
+
+- summary: |
+    Проверка общего отображения товаров в каталоге интернет-магазина
+  requirement: |
+    В каталоге должны отображаться ключевые атрибуты каждого товара: название, рейтинг, цена до скидки и цена со скидкой. Информация должна быть доступна и визуально корректна.
+  prerequisites: |
+    Открыта страница каталога товаров интернет-магазина. Загружены карточки товаров с заполненными данными.
+  test-data: |
+    Пример товара:
+      - Название: Essence Mascara Lash Princess
+      - Рейтинг: 2.56
+      - Цена без скидки: 9.99$
+      - Цена со скидкой: 8.94$
+  steps:
+    - Проверить наличие и корректность рейтинга (числовое значение, визуальные элементы - звёзды или графика).
+    - Проверить, что отображается цена без скидки — выделена, зачёркнута или стилизована.
+    - Проверить, что отображается актуальная цена со скидкой.
+    - Убедиться, что все элементы расположены корректно и не перекрываются.
+  expected-result: |
+    Для всех товаров:
+      - Название товара отображается полностью и читаемо.
+      - Рейтинг представлен корректно: визуально и числово.
+      - Цена без скидки и цена со скидкой отображаются одновременно, различимы визуально.
+      - Информация не обрезается и соответствует контенту карточки.
+
+- summary: |
+    Проверка перехода в категорию товаров по хэштегу из карточки товара
+  requirement: |
+    При нажатии на хэштег в карточке товара пользователь должен перейти в соответствующую категорию, где отображаются связанные товары.
+  prerequisites: |
+    Открыта карточка товара "Essence Mascara Lash Princess". Хэштег #beauty виден и активен для взаимодействия.
+  test-data: |
+    Товар: Essence Mascara Lash Princess  
+    Хэштег: #beauty  
+  steps:
+    - Нажать на хэштег.
+  expected-result: |
+    Переход по хэштегу #beauty работает корректно:
+      - Страница категории открыта без ошибок.
+      - Отображаются товары, связанные с тегом #beauty.
+
+
+
+
 
 
 
