--- a/testing-report.yml
+++ b/testing-report.yml
@@ -25,7 +25,7 @@
 
 - summary: |
     Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
-  status: pass
+  status: fail
 
 - summary: |
     Оформление заказа
@@ -73,7 +73,7 @@
 
 - summary: |
     Проверка корректной работы фильтрации товаров по ценовому диапазону
-  status: pass
+  status: fail
 
 - summary: |
     Проверка обработки некорректного значения при фильтрации товаров по цене
@@ -125,7 +125,7 @@
 
 - summary: |
     Проверка корректного отображения информации и элементов в карточке товара
-  status: pass
+  status: fail
 
 
 
