--- a/bugreports.yml
+++ b/bugreports.yml
@@ -48,22 +48,7 @@
     На устройстве Iphone все элементы полностью не соответсвуют адаптивности. 
 
 - summary: |
-    Сайт не доступен в мобильной версии 
-  environment: |
-    Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
-    Windows 11
-  steps-to-reproduce: |
-    1. Открыть сайт https://hexlet-products-store.vercel.app/
-    2. Нажать F12 или Cntrl+Shift+I
-    3. Нажать на режим адаптивного дизайна
-    4. Выбрать устройство Iphone X
-  expected-result: |
-    функционал и элементы помещаются в экран и отображатся корректно
-  actual-result: |
-    функционал и элементы не помещаются на эран мобильного устройства 
-
-- summary: |
-    Категории поиска работают только по текущей странице
+    Все фильры работают только по текущей странице
   environment: |
      Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
      Windows 11
@@ -71,7 +56,7 @@
     1. Зайти на сайт интернет-магазина https://hexlet-products-store.vercel.app/
     2. Ввести в поиске "lemon"
   expected-result: |
-    Выводится данный товар
+    Товар "lemon" отображается в результатах поиска — независимо от страницы, на которой он находится.
   actual-result: |
     Товар не отображается, так как находится на 2 странице 
 
