--- a/test-cases.yml
+++ b/test-cases.yml
@@ -46,7 +46,7 @@
       - Текст не обрезается, изображения масштабируются пропорционально.
 
 - summary: |
-    Проверка совместимости интернет-магазина с последними версиями популярных браузеров
+    Проверка совместимости интернет-магазина с последними версиями браузеров
   requirement: |
     При открытии сайта в браузере пользователь должен видеть корректный внешний вид и иметь доступ ко всем функциям, включая интерактивные элементы и переходы по страницам.
   prerequisites: |
@@ -199,7 +199,7 @@
     Заказ отображается в истории
 
 - summary: |
-    Проверка удаление товаров из корзины
+    Проверка удаления товаров из корзины
   requirement: |
     При удалении товаров из корзины, товар удаляется из корзины 
   prerequisites: |
@@ -244,7 +244,6 @@
     Названия товаров содержат информацию о бренде.
     В списке отсутствуют товары других брендов.
 
-
 - summary: |
     Проверка фильтрации каталога интернет-магазина при выборе нескольких брендов
   requirement: |
@@ -262,7 +261,6 @@
     На странице отображаются только товары брендов "Essence" и "Nail Couture".
     Названия или описания товаров содержат соответствующие бренды.
     В списке отсутствуют товары, относящиеся к другим брендам.
-
 
 - summary: |
     Проверка корректной фильтрации товаров по диапазону цен и выбранному бренду
