--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,7 +8,7 @@
   status: fail
 
 - summary: |
-    Проверка на совместимость с последней версией браузера
+    Проверка совместимости интернет-магазина с последними версиями браузеров
   status: pass
 
 - summary: |
@@ -20,15 +20,15 @@
   status: pass
 
 - summary: |
-    Проверка поялвения модального окна при добавлении товара в корзину
-  status: fail
-
-- summary: |
     Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
   status: fail
 
 - summary: |
     Оформление заказа
+  status: fail
+
+- summary: |
+    Проверка возможности закрытия окна оформления заказа
   status: fail
 
 - summary: |
@@ -40,7 +40,7 @@
   status: fail
 
 - summary: |
-    Проверка удаление товаров из корзины
+    Проверка удаления товаров из корзины
   status: pass
 
 - summary: |
@@ -125,6 +125,14 @@
 
 - summary: |
     Проверка корректного отображения информации и элементов в карточке товара
+  status: fail
+
+- summary: |
+    Проверка общего отображения товаров в каталоге интернет-магазина
+  status: fail
+
+- summary: |
+    Проверка перехода в категорию товаров по хэштегу из карточки товара
   status: fail
 
 
