--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,20 +1,4 @@
 ---
-
-- summary: |
-    Не появляется модальное окно с указанием количества при добавлении товара в корзину
-  environment: |
-     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
-     Windows 11
-  steps-to-reproduce: |
-    1. Зайти на сайт интернет-магазина https://hexlet-products-store.vercel.app/
-    2. Нажать на кнопку "В корзину" у товара Essence Mascara Lash Princess
-    3. Выбрать количество в появившемся модальном окне
-    4. Нажать кнопку "Добавить"
-  expected-result: |
-    Появляется модальное окно, в котором указываем необходимое количество товара и нажимаем кнопку "Добавить" для дальнейшего добавления товара в корзину
-  actual-result: |
-    Модальное окно отсутствует, товар сразу добавляется в корзину  
-
 - summary: |
     При выборе языка "Russia", язык не поменялся в категориях, названии товаров и в карточке товаров
   environment: |
@@ -160,22 +144,19 @@
     Система не выводит релевантные товары и не предлагает заменить на корректное слово
 
 - summary: |
-    Отсутствует модальное окно подтверждения заказа при оформлении
+    не происходит переход на страницу оплаты товаров при оформлении заказа
   environment: |
      Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
      Windows 11
   steps-to-reproduce: |
     1. Зайти на сайт интернет-магазина https://hexlet-products-store.vercel.app/
     2. Нажать "в корзину" товар Essence Mascara Lash Princess
-    3. Нажать "в корзину" товар Eyeshadow Palette with Mirror
-    4. Нажать "в корзину" товар Powder Canister
-    5. Нажать кнопку "Корзина"
-    6. Нажать кнопку "Оформить заказ"
-    7. Нажать кнопку "Подтвердить заказ"
+    3. Нажать кнопку "Корзина"
+    4. Нажать кнопку "Оформить заказ"
   expected-result: |
-    Появляется модальное окно с названием товара, количеством и ценой. Имеется кнопка "Подтвердить заказ"
+    Происходит переход на страницу оплаты товаров
   actual-result: |
-    Модальное окно с подтверждением заказа не появляется
+    При нажатии на кнопку "Оформить заказ" не происходит перехода на страницу оплаты товаров, а открывается модальное окно с сообщением об успешном оформлении заказа
 
 - summary: |
     Невозможно изменить количество товара в корзине
@@ -212,3 +193,68 @@
     После оформления заказа в личном кабинете отображается история и статус заказов
   actual-result: |
     Данный функциона отсутствует
+
+- summary: |
+    Язык интерфейса не устанавливаться в соответствии с настройками браузера или местоположением пользователя
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11
+  steps-to-reproduce: |
+    1. Перейти на главную страницу интернет-магазина https://hexlet-products-store.vercel.app/
+    2.Проверить, что язык интерфейса соответствует языку браузера или местоположению пользователя
+  expected-result: |
+    Язык интерфейса устанавливается в соответствии с настройками браузера или местоположением пользователя
+  actual-result: |
+    Язык интерфейса не соответствует языку браузера или местоположению пользователя.
+
+- summary: |
+    Окно оформления заказа не закрывается через элемент "X" или нажатие вне окна
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11
+  steps-to-reproduce: |
+    1. Перейти на этап оформления заказа
+    2. Нажать на элемент "X" в правом верхнем углу
+    3. Нажать вне окна оформления заказа
+  expected-result: |
+    Окно оформления заказа закрывается при нажатии на элемент "X" или вне окна
+  actual-result: |
+    Окно оформления заказа не закрывается при нажатии на элемент "X" или вне окна.
+
+- summary: |
+    При нажатии в каталоге между рамками товаров, происходит переход на страницу товара
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11
+  steps-to-reproduce: |
+    1. Перейти в каталог товаров
+    2. Нажать на область между рамками товаров
+  expected-result: |
+    При нажатии в каталоге между рамками товаров, не происходит переход на страницу товара
+  actual-result: |
+    При нажатии в каталоге между рамками товаров, происходит переход на страницу товара.
+
+- summary: |
+    Не происходит перреход в категорию товара при нажатии на хэштег
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11
+  steps-to-reproduce: |
+    1. Перейти в карточку товара
+    2. Нажать на хэштег
+  expected-result: |
+    При нажатии на хэштег, происходит переход в категорию товара
+  actual-result: |    
+    При нажатии на хэштег, не происходит переход в категорию товара.
+
+- summary: |
+    Не отображается рейтинг товара
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11 
+  steps-to-reproduce: |
+    1. Перейти в каталог товаров
+  expected-result: |
+    Рейтинг товара отображается в виде звездочек или числового значения
+  actual-result: |
+    Рейтинг товара не отображается в каталоге товаров, что затрудняет выбор товара для пользователя
