--- a/regress-report.yml
+++ b/regress-report.yml
@@ -9,7 +9,7 @@ test-cases:
   status: fail
 
 - summary: |
-    Проверка на совместимость с последней версией браузера
+    Проверка совместимости интернет-магазина с последними версиями браузеров
   status: pass
 
 - summary: |
@@ -21,15 +21,15 @@ test-cases:
   status: pass
 
 - summary: |
-    Проверка поялвения модального окна при добавлении товара в корзину
+    Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
   status: fail
 
 - summary: |
-    Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
-  status: pass
+    Оформление заказа
+  status: fail
 
 - summary: |
-    Оформление заказа
+    Проверка возможности закрытия окна оформления заказа
   status: fail
 
 - summary: |
@@ -129,12 +129,21 @@ test-cases:
   status: pass
 
 - summary: |
+    Проверка общего отображения товаров в каталоге интернет-магазина
+  status: fail
+
+- summary: |
+    Проверка перехода в категорию товаров по хэштегу из карточки товара
+  status: fail
+
+- summary: |
     Присутствуют производители без title
   status: fail
 
 - summary: |
     Неправильно рассчитывается итоговая сумма заказа
   status: fail
+
 
 bugreports:
   - summary: |
@@ -177,7 +186,7 @@ bugreports:
       Ошибка изображена на скриншоте pages.png
 
   - summary: |
-      Не удаляются товары из корзины
+      Не удаляются товары из корзины через кнопку "Очистить корзину"
     environment: |
       Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
       Windows 11
