--- a/test-cases.yml
+++ b/test-cases.yml
@@ -67,7 +67,7 @@
     - Перейти к "Оформлению заказа" — проверить поля формы, их доступность и внешний вид.
     - Проверить кликабельность всех интерактивных элементов (кнопки, фильтры, ссылки).
     - Оценить скорость загрузки страниц (визуально не более 3 сек).
-  expected-result: 
+  expected-result: |
     - Сайт открывается корректно, без ошибок загрузки или отображения.
     - Верстка соответствует ожидаемому - элементы расположены правильно, не перекрываются.
     - Все функции (каталог, фильтры, корзина, форма заказа) работают стабильно.
